# TinyConf

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  tinyconf.hpp
Tests/: test.cfg  test.cpp
doc/: GettingStarted.md  doxygen_sqlite3.db
doc/html/: annotated.html  classes.html  classstb_1_1Config-members.html  classstb_1_1Config.html  dir_4f479d9436dbcd69df9e5556c36f5923.html  dir_4f479d9436dbcd69df9e5556c36f5923_dep.map  dir_4f479d9436dbcd69df9e5556c36f5923_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_defs.html  graph_legend.html  index.html  md_README.html  md_doc_GettingStarted.html  pages.html  structstb_1_1Config_1_1has__const__iterator-members.html  structstb_1_1Config_1_1has__const__iterator.html  structstb_1_1has__const__iterator-members.html  structstb_1_1has__const__iterator.html  tinyconf_8config_8hpp_source.html  tinyconf_8hpp.html  tinyconf_8hpp__incl.map  tinyconf_8hpp__incl.md5  tinyconf_8hpp_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  search.js  (+2 more)
include/tinyconf/: tinyconf.config.hpp  tinyconf.hpp
tests/: CMakeLists.txt  speed.cpp  test.cpp
